# test_claudeskills

./: github-config.yaml
.claude/skills/github/: SKILL.md  pyproject.toml
.claude/skills/github/assets/: bug-report.md  epic.md  github-config.yaml  tech-task.md  user-story.md
.claude/skills/github/assets/workflows/: board-sync.yml  lint.yml
.claude/skills/github/references/: issues.md  projects.md  pull-requests.md  repos.md  security.md  workflows.md
.claude/skills/github/scripts/: create-epic.sh  create-story.sh  install-board-sync.sh  install-lint.sh  setup-config.sh  validate_skill.py
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/implementation-artifacts/: 1-1-project-initialization-basic-script.md  2-2-simulation-engine-with-chunked-processing.md  sprint-status.yaml
docs/planning-artifacts/: architecture.md  epics.md  prd.md  product-brief-test_claudeskill-2026-01-14.md
lln_explorer/: .gitignore  lln_explorer.py
lln_explorer/tests/: test_simulation.py
